# management-cockpit-crm

./: .dockerignore  .env.example  Dockerfile  Makefile  Management Cockpit CRM.postman_collection.json  README.md  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.pg.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  test.env.example
app/: ping.py  settings.py  test_settings.py  urls.py
entity/: admin.py  middleware.py  serializers.py  urls.py
entity/fixtures/: 001_entity_types.json  002_detail_types.json  003_entities.json  004_entity_details.json  005_users.json
entity/migrations/: 0001_enable_btree_gist.py  0002_initial.py  0003_entity_entity_is_current_idx_and_more.py  0004_entity_hashdiff_entity_ent_uid_curr_cov_idx_and_more.py  0005_auditlog.py  0006_alter_entity_entity_type_and_more.py
entity/models/: __init__.py  audit.py  detail.py  entity.py  type.py
entity/serializers/: __init__.py  entity.py  temporal.py
entity/services/: __init__.py  asof.py  create.py  datetime_validation.py  diff.py  entity.py  get.py  history.py  list.py  update.py
entity/tests/: __init__.py  factories.py  test_api_endpoints.py  test_constraints.py  test_idempotency.py  test_scd2_transitions.py  test_temporal_queries.py
entity/views/: __init__.py  asof.py  diff.py  entity.py  history.py  snapshot.py  temporal.py
services/: __init__.py  audit.py  datetime.py  hash.py  pagination.py  scd2.py
tests/: conftest.py  factories.py
tests/api/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py
typings/django/apps/: registry.pyi
typings/django/conf/: __init__.pyi  global_settings.pyi
typings/django/contrib/staticfiles/: storage.pyi
typings/django/core/: validators.pyi
typings/django/core/cache/backends/: base.pyi
typings/django/core/checks/: model_checks.pyi
typings/django/core/files/: base.pyi  images.pyi  locks.pyi  temp.pyi  utils.pyi
typings/django/core/management/: color.pyi
typings/django/core/serializers/: base.pyi
typings/django/db/backends/: utils.pyi
typings/django/db/backends/base/: operations.pyi
typings/django/db/models/: __init__.pyi  constraints.pyi  enums.pyi  expressions.pyi  lookups.pyi  query.pyi  query_utils.pyi
typings/django/db/models/fields/: __init__.pyi  files.pyi  generated.pyi  related.pyi  related_descriptors.pyi  reverse_related.pyi
typings/django/db/models/functions/: comparison.pyi  datetime.pyi  text.pyi
typings/django/db/models/sql/: datastructures.pyi  query.pyi
typings/django/dispatch/: dispatcher.pyi
typings/django/forms/: boundfield.pyi  fields.pyi  forms.pyi  formsets.pyi  models.pyi  renderers.pyi  utils.pyi  widgets.pyi
typings/django/http/: request.pyi
typings/django/template/: base.pyi  context.pyi  library.pyi
typings/django/template/backends/: jinja2.pyi  utils.pyi
typings/django/urls/: converters.pyi  resolvers.pyi  utils.pyi
typings/django/utils/: _os.pyi  archive.pyi  asyncio.pyi  autoreload.pyi  choices.pyi  crypto.pyi  datastructures.pyi  decorators.pyi  deprecation.pyi  feedgenerator.pyi  formats.pyi  functional.pyi  hashable.pyi  html.pyi  http.pyi  jslex.pyi  lorem_ipsum.pyi  regex_helper.pyi  safestring.pyi  termcolors.pyi  text.pyi  timezone.pyi  version.pyi  xmlutils.pyi
typings/django/utils/translation/: __init__.pyi  trans_real.pyi
typings/django/views/decorators/: csrf.pyi
typings/django/views/generic/: base.pyi
